<resources>
    <string name="app_nam_main">指盈金服</string>
    <string name="app_name">指盈金服</string>
    <string name="app_downing">正在下载：指盈金服</string>
    <string name="market">main</string>
    <string name="market_other">other</string>
    <string name="market_baidu">baidu</string>
    <string name="market_taobao">taobao</string>
    <string name="market_huawei">huawei</string>
    <string name="market_baidumon">Baidu-Mobads</string>
    <string name="market_xiaomi">xiaomi</string>
    <string name="market_samsung">samsung</string>
    <string name="network_problem">网络连接失败</string>
    <string name="string_lable_market">market</string>
    <string name="string_lable_versionCode">versionCode</string>
    <string name="aboutus_lable">关于我们</string>
    <string name="law_app">本产品提供的信息内容仅供参考，不作为投资者交易的依据，投资者据此操作，风险自担。</string>
    <string name="law_lable">风险提示</string>
    <string name="title_week_share">分享领代金券</string>
    <string name="kline_cycle_1m">分时</string>
    <string name="kline_cycle_5m">5分钟</string>
    <string name="kline_cycle_15m">15分钟</string>
    <string name="kline_cycle_30m">30分钟</string>
    <string name="kline_cycle_1h">1小时</string>
    <string name="kline_cycle_4h">4小时</string>
    <string name="kline_cycle_1d">日线</string>
    <string name="kline_cycle_other">其他</string>
    <string name="tab_main_home">首页</string>
    <string name="tab_main_market">行情</string>
    <string name="tab_main_news">资讯</string>
    <string name="tab_main_weipan">交易</string>
    <string name="tab_main_live">直播</string>
    <string name="tab_main_me">我的</string>
    <string name="small_window_save">保存</string>
    <string name="small_window_variety">品种</string>
    <string name="small_window_enter_txt">进入应用</string>
    <string name="small_window_close_txt">关闭</string>
    <string name="small_window_settings_txt">设置</string>
    <string name="small_window_international_txt">"(国际)"</string>
    <string name="small_window_title_txt">"悬浮窗口"</string>
    <string name="small_window_temp_txt">"- -"</string>
    <string name="small_window_toast_no_data">当前品种暂无数据！</string>
    <string name="data_no_more">没有更多数据了！</string>
    <string name="data_empty">暂无数据！</string>
    <string name="home_tab_news">重要消息</string>
    <string name="home_tab_calendar">财经日历</string>
    <string name="home_tab_rank">盈利榜</string>
    <string name="home_tab_hot">热门行情</string>
    <string name="home_tab_hot_more">查看更多</string>
    <string name="home_tab_profit">最新盈利:</string>
    <string name="str_lable_weipan"></string>
    <string name="trade_title_lable">交易大厅</string>
    <string name="trade_choose_lable">{total}的用户选择买跌</string>
    <string name="trade_create_success">建仓成功</string>
    <string name="trade_create_fail">建仓失败</string>
    <string name="trade_close_success">平仓成功</string>
    <string name="trade_close_fail">平仓失败</string>
    <string name="trade_buy_up">买涨</string>
    <string name="trade_buy_down">买跌</string>
    <string name="trade_close">平仓</string>
    <string name="trade_close_speed">快速平仓</string>
    <string name="trade_closeempty">暂无持仓</string>
    <string name="trade_orderhold_num">持仓(%1$d)</string>
    <string name="trade_queryorder">查看持仓</string>
    <string name="trade_surplus">浮动盈亏</string>
    <string name="trade_create_fee">手续费</string>
    <string name="trade_create_time">建仓时间</string>
    <string name="trade_guoye_fee">过夜费</string>
    <string name="trade_mostnew_price">最新价</string>
    <string name="trade_mostnew_point">浮动点位</string>
    <string name="str_trade_deal">处理中...</string>
    <string name="str_msg_longing">加载中</string>
    <string name="str_msg_wait">请稍等</string>
    <string name="trade_order_currentprice">现价</string>
    <string name="trade_order_closeprice">平仓价</string>
    <string name="trade_order_zhisun">止损:&#160;&#160;</string>
    <string name="trade_order_zhiying">止盈:&#160;&#160;</string>
    <string name="trade_order_deferred">过夜费:&#160;&#160;</string>
    <string name="trade_order_createfee">手续费:&#160;&#160;</string>
    <string name="trade_order_usemoney">占用预付款:&#160;&#160;</string>
    <string name="trade_order_createtime">建仓时间:&#160;&#160;</string>
    <string name="trade_order_closetype">平仓类型:&#160;&#160;</string>
    <string name="trade_order_message">交易消息</string>
    <string name="trade_order_notification">%1$s,平仓价格%2$s,盈亏%3$s美元</string>
    <string name="trade_order_goproduct">看行情</string>
    <string name="trade_order_changeorder">修改止盈止损</string>
    <string name="trade_order_arrow">&#8595;</string>
    <string name="trade_order_cashin">入金</string>
    <string name="trade_order_cashout">出金</string>
    <string name="trade_order_mangaecard">管理银行卡</string>
    <string name="trade_order_addcard">添加银行卡</string>
    <string name="trade_order_cardnum4">尾号:&#160;</string>
    <string name="trade_order_unbindcard">解绑</string>
    <string name="trade_order_bindcard">绑定</string>
    <string name="trade_order_bindcard_title">绑定银行卡</string>
    <string name="trade_order_cashout_tips">当前汇率:美元:人民币=1:%1$s, 折合人民币:¥%2$s元</string>
    <string name="trade_order_closetime">平仓时间:&#160;&#160;</string>
    <string name="trade_order_tradehistory">交易历史</string>
    <string name="trade_order_cashhistory">出入金记录</string>
    <string name="trade_order_cashhistory_detail">出入金明细</string>
    <string name="cash_out_input_money">请输入提取金额</string>
    <string name="cash_out_input_bank">请选择银行</string>
    <string name="cash_out_input_provice">请选择开户行所在省份</string>
    <string name="cash_out_input_city">请选择开户行所在城市</string>
    <string name="cash_out_input_branch">请选择开户行支行</string>
    <string name="cash_jd_idcard">请输入身份证</string>
    <string name="cash_jd_sms_hint">请输入短信验证码</string>
    <string name="cash_jd_mobileNum">请输入银行预留手机号码</string>
    <string name="cash_out_input_bankBrach">请输入银行支行名称</string>
    <string name="cash_out_input_card">请输入本人借记卡卡号</string>
    <string name="cash_out_input_cardName">请输入持卡人姓名</string>
    <string name="cash_out_input_checkCode">请输入验证码</string>
    <string name="cash_out_fee_hg">(100元以内需缴纳2元手续费)</string>
    <string name="cash_out_fee_jn">(100元以内需缴纳2元手续费)</string>
    <string name="tab_video">聊天室</string>
    <string name="tab_gonggao">公告</string>
    <string name="tab_advice">文字直播</string>
    <string name="tab_fxs">分析师</string>
    <string name="trade_set_profit_tips">*投资有风险，交易需谨慎，做好止损，降低风险。</string>
    <string name="str_chat_room_title">聊天室</string>
    <string name="str_trade_tips01">1.暂不支持持仓过夜，收盘后将自动平仓</string>
    <string name="str_trade_tips02">2.同一品种如有持仓，需平仓后才可建新单</string>
    <string name="str_trade_tips03_cash">3.本次购买将从余额中扣除</string>
    <string name="str_trade_quan_tips01">3.代金券免手续费，盈利后获得其中收益，亏损您无需承担</string>
    <string name="str_trade_cash">现金不够用？>>分享拿券</string>
    <string name="str_set_profit_limit">设置范围(10~50)</string>
    <string name="str_yk_tips">最小单位波动一个点盈利%s元</string>
    <string name="share_window_title">活动规则</string>
    <string name="share_window_step_lable_01">1. 参与对象:</string>
    <string name="share_window_step_lable_02">2. 参与方式:</string>
    <string name="share_window_step_lable_03">3. 活动奖励:</string>
    <string name="share_window_step_text_01">汇大师注册用户</string>
    <string name="share_window_step_text_02">点击【点击分享】，并成功分享至微信朋友圈</string>
    <string name="share_window_step_text_03">成功分享完成，送8元代金券1张，每周1次</string>
    <string name="str_trade_gg_you">广贵油</string>
    <string name="str_trade_gg_yin">广贵银</string>
    <string name="str_trade_hg_you">哈贵油</string>
    <string name="str_trade_hg_yin">哈贵银</string>
    <string name="str_trade_hg_nie">哈贵镍</string>
    <string name="home_rank_hint">(当天排名次日凌晨4点送券)</string>
    <string name="nodata_trade_hold">您当前没有购买的产品\n快去交易吧</string>
    <string name="voucher_tips">限%s元/手的产品使用</string>
    <string name="reg_hint_01">点击表示您已阅读并同意</string>
    <string name="reg_hint_02">&#8968;用户协议&#8971;</string>
    <string name="reg_hint_03">保障您的资金安全</string>
    <string name="empty_deferred">暂无过夜记录</string>
    <string name="empty_noprofitorder">暂无可晒盈利单</string>
    <string name="empty_notradeorder">暂无交易记录</string>
    <string name="empty_nocashout">暂无出金记录</string>
    <string name="empty_nocashin">暂无入金记录</string>
    <string name="qucik_create_count01">%s手</string>
    <string name="qucik_create_count02">%s手</string>
    <string name="qucik_create_count03">%s手</string>
    <string name="token_title_disable">交易密码已过期</string>
    <string name="token_msg_disable">为保障您的资金安全，\n交易大厅6小时后自动注销</string>
    <string name="token_btn_disable">重新输入</string>
    <string name="token_title_setpwd">请输入交易密码</string>
    <string name="token_msg_setpwd">为保障您的资金安全，\n输入交易密码后可查看交易信息</string>
    <string name="token_btn_setpwd">输入密码</string>
    <string name="token_title_init">请设置%s交易密码</string>
    <string name="token_msg_init">注意：三所账户独立\n需单独设置%s交易密码</string>
    <string name="token_btn_init">设置</string>
    <string name="video_empty">当前是非视频直播时段\n稍后再来吧</string>
    <string name="chat_notice">【公告】聊天室内禁止发QQ、微信、手机号等联系方式和广告，一经发现，永久禁用！请大家一起维护聊天室的环境，谢谢。</string>
    <string name="chat_notice_1">聊天室内禁止发QQ、微信、手机号等联系方式和广告，请大家一起维护聊天室的环境，感谢。</string>
    <string name="str_fengxian_title">用户协议</string>
    <string name="tick_rule_lable">代金券使用规则</string>
    <string name="tick_rule_01">代金券仅限购买对应面额的产品，如200元代金券只能购买200元/手的产品。</string>
    <string name="tick_rule_02">一笔交易中，代金券和现金不可同时使用</string>
    <string name="tick_rule_03">一笔交易中，最多可使用10张代金券</string>
    <string name="tick_rule_04">代金券领取之后在有效期内使用，过期后代金券将收回。</string>
    <string name="tick_rule_05">代金券仅限领取时的账号使用，不可买卖、转赠他人。</string>
    <string name="redpacket_rule_lable">红包说明</string>
    <string name="redpacket_rule_01">红包是农交所专有，等同于现金，可用于建仓、抵充手续费，不能提现。</string>
    <string name="redpacket_rule_02">建仓时优先使用红包；平仓时亏损部分优先消耗红包。</string>
    <string name="redpacket_rule_03">使用红包建仓，平仓时盈利同比例返回红包账户。</string>
    <string name="redpacket_rule_04">红包有效期为30天，包含双休及节假日。</string>
    <string name="redpacket_rule_05">红包有效期内获取新的红包，则以最新的红包有效期为准。</string>
    <string name="money_lable">$</string>
    <string name="str_goto_index_trade">去往交易大厅</string>
    <string name="live_plan">时间表</string>
    <string name="me_know_eight">一分钟了解汇大师</string>
    <string name="quick_fee_str">(手续费:%s元)</string>
    <string name="login_please">请先登录</string>
    <string name="login_hint">说明：汇大师账户系统安全升级，请您设置登录密码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_code">输入验证码</string>
    <string name="input_pwd">输入6-12位登录密码</string>
    <string name="input_pwd_reset">设置6-12位新密码</string>
    <string name="jn_cashout_tip1">%1$s提现手续费规则:</string>
    <string name="jn_cashout_tip2">&#8226;&#160;&#160;2500元以内的提现金额收取1%的手续费。</string>
    <string name="jn_cashout_tip3">&#8226;&#160;&#160;提现不足200元收取2元手续费。</string>
    <string name="jn_cashout_tip4">&#8226;&#160;&#160;提现手续费25元封顶。</string>
    <string name="jn_cashout_tip5">到账时间:</string>
    <string name="jn_cashout_tip6">单笔提现小于2000元或当天累计提现小于1万元，即时到账。</string>
    <string name="jn_cashout_tip7">单笔提现大于2000元或当天累计提现大于1万元，隔天到账。</string>
    <string name="aq_complete_title">恭喜您获得800积分</string>
    <string name="aq_complete_content">可以去积分商城兑换代金券啦！</string>
    <string name="aq_go_missioncenter">返回任务中心</string>
    <string name="aq_go_intergralmarket">查看积分商城</string>
    <string name="copy_right01">©2002-2017</string>
    <string name="copy_right02">FX</string>
    <string name="copy_right03">BTG</string>
    <string name="copy_right04">Global 版权所有</string>
    <string name="lable_guofuqihuo">国富期货登录</string>
    <string name="lable_zhanghu">账户</string>
    <string name="lable_zhanghu_hint">开户短信中的8位数字账户</string>
    <string name="lable_jiaoyimima">交易密码</string>
    <string name="lable_jiaoyimima_hint">请填写您的6-16位交易密码</string>
    <string name="lable_qihuo_logintips">不可登录时间：工作日16:30-20:00和周末全天</string>
    <string name="lable_qihuo_openim">立即开户</string>
    <string name="lable_login">登录</string>
    <string name="trade_order_ccjj">持仓均价</string>
    <string name="trade_hold_profit">持仓盈亏</string>
    <string name="lable_instrument">合约</string>
</resources>