<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/img_cashout_tipsicon"
    android:layout_marginRight="@dimen/margin_16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jn_cashout_tip1"
        android:textSize="@dimen/text_size_12sp"
        android:textColor="@color/grey"
        android:layout_marginTop="24dip"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:id="@+id/text_jn_cashout_tip1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jn_cashout_tip2"
        android:textSize="@dimen/text_size_12sp"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:id="@+id/text_jn_cashout_tip2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jn_cashout_tip3"
        android:textSize="@dimen/text_size_12sp"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:id="@+id/text_jn_cashout_tip3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jn_cashout_tip4"
        android:textSize="@dimen/text_size_12sp"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:id="@+id/text_jn_cashout_tip4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jn_cashout_tip5"
        android:textSize="@dimen/text_size_12sp"
        android:textColor="@color/grey"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/margin_16dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel_cashout_tip7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&#8226;&#160;&#160;"
            android:textSize="@dimen/text_size_12sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dip"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:id="@+id/tv_tips6_left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jn_cashout_tip7"
            android:textSize="@dimen/text_size_12sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dip"
            android:layout_toRightOf="@id/tv_tips6_left"
            android:id="@+id/text_jn_cashout_tip7"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel_cashout_tip6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&#8226;&#160;&#160;"
            android:textSize="@dimen/text_size_12sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dip"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:id="@+id/tv_tips7_left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jn_cashout_tip6"
            android:textSize="@dimen/text_size_12sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dip"
            android:layout_toRightOf="@id/tv_tips7_left"
            android:id="@+id/text_jn_cashout_tip6"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel_cashout_tip9"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&#8226;&#160;&#160;"
            android:textSize="@dimen/text_size_12sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dip"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:id="@+id/tv_tips9_left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_12sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dip"
            android:layout_toRightOf="@id/tv_tips9_left"
            android:id="@+id/text_jn_cashout_tip9"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_8dp"/>
</LinearLayout>
