<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_60dp"
        android:paddingLeft="@dimen/margin_16dp"
        android:paddingRight="@dimen/margin_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/lable_guofuqihuo"
            android:textColor="@color/c_464646"
            android:textSize="@dimen/text_size_20sp" />

        <Button
            android:id="@+id/btn_qihuologin_help"
            android:layout_width="@dimen/margin_24dp"
            android:layout_height="@dimen/margin_24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_4dp"
            android:background="@drawable/img_hometrade_help" />

        <View
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />

        <TextView
            android:id="@+id/text_qhlogin_cancle"
            android:layout_width="@dimen/margin_24dp"
            android:layout_height="@dimen/margin_24dp"
            android:background="@drawable/img_closedlg_icon"
            android:gravity="center|right"
            android:padding="@dimen/margin_4dp"
            android:textColor="@color/c_BB8B7D"
            android:textSize="@dimen/text_size_15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/c_E6E7EA_70" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:paddingLeft="@dimen/margin_16dp"
        android:paddingRight="@dimen/margin_16dp">

        <TextView
            android:layout_width="@dimen/margin_80dp"
            android:layout_height="@dimen/margin_60dp"
            android:gravity="center|left"
            android:text="@string/lable_zhanghu"
            android:textColor="@color/c_464646"
            android:textSize="@dimen/text_size_15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_60dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_qhlogin_zh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@null"
                android:hint="@string/lable_zhanghu_hint"
                android:textColor="@color/c_464646"
                android:textColorHint="@color/c_999999_40"
                android:textSize="@dimen/text_size_15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/c_E6E7EA_70" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:paddingLeft="@dimen/margin_16dp"
        android:paddingRight="@dimen/margin_16dp">

        <TextView
            android:layout_width="@dimen/margin_80dp"
            android:layout_height="@dimen/margin_60dp"
            android:gravity="center|left"
            android:text="@string/lable_jiaoyimima"
            android:textColor="@color/c_464646"
            android:textSize="@dimen/text_size_15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_60dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_qhlogin_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@null"
                android:hint="@string/lable_jiaoyimima_hint"
                android:password="true"
                android:textColor="@color/c_464646"
                android:textColorHint="@color/c_999999_40"
                android:textSize="@dimen/text_size_15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/c_E6E7EA_70" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_qhlogin_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_55dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_36dp"
        android:background="@drawable/bg_btn_qihuo_login"
        android:text="@string/lable_login"

        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:paddingLeft="@dimen/margin_16dp"
        android:paddingRight="@dimen/margin_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_24dp"
            android:layout_weight="1.0"
            android:gravity="center|left"
            android:text="@string/lable_qihuo_logintips"
            android:textColor="@color/c_999999_70"
            android:textSize="@dimen/text_size_12sp" />

        <LinearLayout
            android:id="@+id/line_qhlogin_openim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_gocashin"
                android:layout_width="@dimen/margin_60dp"
                android:layout_height="@dimen/margin_24dp"
                android:gravity="center"
                android:paddingRight="@dimen/margin_2dp"
                android:text="@string/lable_qihuo_openim"
                android:textColor="@color/c_BB8B7D"
                android:textSize="@dimen/text_size_12sp" />

            <ImageView
                android:layout_width="@dimen/margin_24dp"
                android:layout_height="@dimen/margin_24dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/img_trade_arrow_1" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>